--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jul 24 10:24:11 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_driver.c: Fixed crash when cleaning up after failed
+	attempt to start a VM.
+
 Tue Jul 24 10:20:11 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/remote.c: Always immediately free virDomainPtr objects
