--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 30 14:40:23 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_conf.c: Validate requested architecture and reject
+	unsupported ones
+
 Mon Jul 30 12:15:43 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/xen_internal.c: add report of ACPI/APIC for Xen fully virt,
