--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Aug  2 12:49:08 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xml.c: changes from Masayuki Sunou to improve error reporting
+	  on device XML errors.
+
 Tue Jul 31 10:24:23 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c, src/xml.c, tests/qemuxml2argvtest.c,
