--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+Thu Aug  9 14:27:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/libvirt.c, src/openvz_conf.c, src/qemu_conf.c,
+	src/test.c, src/xm_internal.c, src/xend_internal.c: Use
+	virUUIDFormat() / virUUIDGenerate / virUUIDParse apis.
+	* qemu/internal.h: Remove unused UUID_LEN constants
+	* src/openvz_conf.h, src/qemu_conf.h: Remove duplicated
+	UUID length constants
+	* src/xml.c, src/xml.h: Remove virParseUUID api
+	* src/uuid.h, src/uuid.c: Add virUUIDFormat() api.
+	* proxy/Makefile.am: Include uuid.o
+
 Tue Aug  7 16:35:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/Makefile.am: gnutls_1_0_compat.h to list of sources
