* src/qemu_driver.c: patch from Jim Paris removing memory leak * AUTHORS: updated with Shuveb and Jim Daniel

--- a/AUTHORS
+++ b/AUTHORS
@@ -35,6 +35,8 @@ Patches have also been contributed by:
   Masayuki Sunou       <fj1826dm@aa.jp.fujitsu.com>
   Mark Johnson         <johnson.nh@gmail.com>
   Christian Ehrhardt   <ehrhardt@linux.vnet.ibm.com>
+  Shuveb Hussain       <shuveb@binarykarma.com>
+  Jim Paris            <jim@jtan.com>
 
   [....send patches to get your name here....]
 
