--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Aug 13 11:55:48 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/qemu_driver.c: patch from Jim Paris removing memory leak
+	* AUTHORS: updated with Shuveb and Jim
+
 Fri Aug 10 14:25:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/xen_internal.c, src/xen_internal.h, src/xen_unified.c:
