--- a/virsh.1
+++ b/virsh.1
@@ -129,7 +129,7 @@
 .\" ========================================================================
 .\"
 .IX Title "VIRSH 1"
-.TH VIRSH 1 "2007-07-26" "perl v5.8.8" "Virtualization Support"
+.TH VIRSH 1 "2007-08-14" "perl v5.8.8" "Virtualization Support"
 .SH "NAME"
 virsh \- management user interface
 .SH "SYNOPSIS"
@@ -139,7 +139,7 @@ virsh <subcommand> [args]
 .IX Header "DESCRIPTION"
 The \fBvirsh\fR program is the main interface for managing virsh guest
 domains. The program can be used to create, pause, and shutdown
-domains. It can also be used to list current domains. Libvirt is a C toolkit to interract with the virtualization capabilities of recent versions of Linux (and other OSes). It is free software available under the \s-1GNU\s0 Lesser General Public License. Virtualization of the Linux Operating System means the ability to run multiple instances of Operating Systems concurently on a single hardware system where the basic resources are driven by a Linux instance. The library aim at providing long term stable C \s-1API\s0 initially for the Xen paravirtualization but should be able to integrate other virtualization mechanisms, it currently also support QEmu and \s-1KVM\s0.
+domains. It can also be used to list current domains. Libvirt is a C toolkit to interact with the virtualization capabilities of recent versions of Linux (and other OSes). It is free software available under the \s-1GNU\s0 Lesser General Public License. Virtualization of the Linux Operating System means the ability to run multiple instances of Operating Systems concurrently on a single hardware system where the basic resources are driven by a Linux instance. The library aim at providing long term stable C \s-1API\s0 initially for the Xen paravirtualization but should be able to integrate other virtualization mechanisms, it currently also support QEmu and \s-1KVM\s0.
 .PP
 The basic structure of most virsh usage is:
 .PP
@@ -163,10 +163,10 @@ the program.
 .SH "NOTES"
 .IX Header "NOTES"
 All \fBvirsh\fR operations rely upon the libvirt library.
-For any virsh commands to run xend/qemu, or what ever virtual library that libvirt suports.  For this reason you should start xend/qemu as a service when your system first boots using xen/qemu. This can usually be done using the command
+For any virsh commands to run xend/qemu, or what ever virtual library that libvirt supports.  For this reason you should start xend/qemu as a service when your system first boots using xen/qemu. This can usually be done using the command
 \&\fBservice start libvirtd\fR .
 .PP
-Most \fBvirsh\fR commands require root privledges to run due to the
+Most \fBvirsh\fR commands require root privileges to run due to the
 communications channels used to talk to the hypervisor.  Running as
 non root will return an error.
 .PP
@@ -181,7 +181,7 @@ actions has finished you must poll through virsh list periodically.
 The following commands are generic i.e. not specific to a domain.
 .IP "\fBhelp\fR optional \fIcommand\fR" 4
 .IX Item "help optional command"
-This prints a small synoposis about all commands available for \fBvirsh\fR
+This prints a small synopsis about all commands available for \fBvirsh\fR
 \&\fBhelp\fR \fIcommand\fR will print out a detailed help message on that command.
 .IP "\fBquit\fR" 4
 .IX Item "quit"
@@ -226,7 +226,7 @@ allow to connect locally as a normal user to the his own set of QEmu and \s-1KVM
 .RE
 .RS 4
 .Sp
-For remote access see the documetnation page on how to make URIs.
+For remote access see the documentation page on how to make URIs.
 The \fI\-\-readonly\fR option allows for read-only connection
 .RE
 .IP "\fBnodeinfo\fR" 4
@@ -273,7 +273,7 @@ current Domain is in.
 The domain is currently running on a \s-1CPU\s0
 .IP "\fBb \- blocked\fR" 4
 .IX Item "b - blocked"
-The domain is blocked, and not running or runable.  This can be caused
+The domain is blocked, and not running or runnable.  This can be caused
 because the domain is waiting on \s-1IO\s0 (a traditional wait state) or has
 gone to sleep because there was nothing else for it to do.
 .IP "\fBp \- paused\fR" 4
@@ -348,7 +348,7 @@ convert a domain Id to domain name
 Returns state about a running domain.
 .IP "\fBdumpxml\fR \fIdomain-id\fR" 4
 .IX Item "dumpxml domain-id"
-Ouput the domain informations as an \s-1XML\s0 dump to stdout, this format can be used by the \fBcreate\fR command. 
+Output the domain informations as an \s-1XML\s0 dump to stdout, this format can be used by the \fBcreate\fR command. 
 .IP "\fBreboot\fR \fIdomain-id\fR" 4
 .IX Item "reboot domain-id"
 Reboot a domain.  This acts just as if the domain had the \fBreboot\fR
@@ -390,7 +390,7 @@ original description of domain.
 .IP "\fBshutdown\fR \fIdomain-id\fR" 4
 .IX Item "shutdown domain-id"
 Gracefully shuts down a domain.  This coordinates with the domain \s-1OS\s0
-to perform graceful shutdown, so there is no guaruntee that it will
+to perform graceful shutdown, so there is no guarantee that it will
 succeed, and may take a variable length of time depending on what
 services must be shutdown in the domain.  
 .Sp
@@ -409,7 +409,7 @@ hypervisor.
 .IP "\fBttyconsole\fR \fIdomain-id\fR" 4
 .IX Item "ttyconsole domain-id"
 Output the device used for the \s-1TTY\s0 console of the domain. If the information
-is not available the processus will provide an exit code of 1.
+is not available the processes will provide an exit code of 1.
 .IP "\fBundefine\fR \fIdomain-id\fR" 4
 .IX Item "undefine domain-id"
 Undefine the configuration for an inactive domain. Since it's not running
@@ -425,7 +425,7 @@ and \fIcpulist\fR is a comma separated list of physical \s-1CPU\s0 numbers.
 .IP "\fBvncdisplay\fR \fIdomain-id\fR" 4
 .IX Item "vncdisplay domain-id"
 Output the \s-1IP\s0 address and port number for the \s-1VNC\s0 display. If the information
-is not available the processus will provide an exit code of 1.
+is not available the processes will provide an exit code of 1.
 .RE
 .RS 4
 .SH "DEVICES COMMANDS"
@@ -465,7 +465,7 @@ Detach a disk device from a domain. The \fItarget\fR is the device as seen
 from the domain.
 .IP "\fBdetach-interface\fR \fIdomain-id\fR \fItype\fR optional \fI\-\-mac mac\fR" 4
 .IX Item "detach-interface domain-id type optional --mac mac"
-Detatch a network interface from a domain.
+Detach a network interface from a domain.
 \&\fItype\fR can be either \fInetwork\fR to indicate a physical network device or \fIbridge\fR to indicate a bridge to a device.
 It is recommended to use the \fImac\fR option to distinguish between the interfaces
 if more than one are present on the domain.
@@ -475,7 +475,7 @@ if more than one are present on the domain.
 .IX Header "VIRTUAL NETWORKS COMMANDS"
 The following commands manipulate networks. Libvirt has the capability to
 define virtual networks which can then be used by domains and linked to
-actual network dvices. For more detailed informations about this feature
+actual network devices. For more detailed informations about this feature
 see the documentation at <http://libvirt.org/format.html#Net1> . A lot
 of the command for virtual networks are similar to the one used for domains,
 but the way to name a virtual network is either by its name or \s-1UUID\s0.
@@ -490,7 +490,7 @@ a description of the \s-1XML\s0 network format used by libvirt.
 .IP "\fBnet-define\fR \fIfile\fR" 4
 .IX Item "net-define file"
 Define a virtual network from an \s-1XML\s0 \fIfile\fR, the network is just defined but
-not instanciated.
+not instantiated.
 .IP "\fBnet-destroy\fR \fInetwork\fR" 4
 .IX Item "net-destroy network"
 Destroy a given virtual network specified by its name or \s-1UUID\s0. This takes
