--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Aug 14 09:10:51 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: patch from Atsushi SAKAI fixing schedinfo synopsys
+
 Tue Aug 14 09:04:41 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* virsh.1 docs/virsh.pod: typo fixes from Atsushi SAKAI
