--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Aug 14 14:32:51 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/proxy_internal.c: fix the UUID lookup though proxy, by
+	  actually sending the UUID string in the request!
+
 Tue Aug 14 09:10:51 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/virsh.c: patch from Atsushi SAKAI fixing schedinfo synopsys
