--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Aug 15 12:21:13 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/virsh.c: fixed 2 small bugs in setvcpus command, after
+	  Atsushi SAKAI pointed out a value checking problem
+
 Tue Aug 14 14:32:51 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* src/proxy_internal.c: fix the UUID lookup though proxy, by
