--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Tue Aug 21 13:52:29 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/xs_internal.c: cleanup of memory leaks from Masayuki Sunou
+	* src/virsh.c: another memory leaks of virsh schedinfo cleanup from
+	  Saori Fukuta
+	* po/*: string localization merge/update
+
 Tue Aug 21 10:58:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/libvirt.c (virDomainBlockStats, virDomainInterfaceStats):
