--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Aug 30 15:11:44 CEST 2007 Daniel Veillard <veillard@redhat.com>
+
+	* src/buf.c: applied patch from Masayuki Sunou fixing a loop
+	  due to an error in growing buffers.
+
 Wed Aug 29 14:43:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/xen_internal.c (xenHypervisorDomainInterfaceStats): Swap
