--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Thu Sep 13 17:58:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_conf.c: Fix handling of <boot> tag for network PXE
+	* tests/qemuxml2argvdata/qemuxml2argv-boot-network.xml: Fix test
+	for network PXE boot element
+	* tests/qemuxml2argvtest.c, tests/qemuxml2xmltest.c: Fixed potential
+	SEGV crash in error case cleanup
+
 Wed Sep 12 16:35:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/xend_internal.c, src/xml.c, src/xml.h: Properly check buffer
