--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Sep 17 23:04:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/remote_internal.c: Track child pid and do waitpid to clean
+	up zombies if running over a tunnel
+
 Thu Sep 13 17:58:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/qemu_conf.c: Fix handling of <boot> tag for network PXE
