--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Sep 18 19:32:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Print out summary of configuration options
+
 Mon Sep 17 23:04:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Track child pid and do waitpid to clean
