--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Wed Sep 19 13:39:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* configure.in: Use pkg-config to locate gnutls if pkg-config
+	is available. Add $(GNUTLS_LIBS) $(GNUTLS_CFLAGS) to all the
+	relevant make targets
+
 Wed Sep 19 09:48:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
 	* configure.in: Make sure we use pkg-config for libxml, where
