--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Fri Sep 21 15:06:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_driver.c: Use libxml for parsing & checking URIs
+
 Thu Sep 20 19:37:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
 
 	* src/bridge.c, src/qemu_driver.c, configure.in: Try to detect
