--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 Fri Sep 21 15:06:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
 
+	* acinclude.m4: Check all compiler flags link successfully 
+	instead of just compiling, to deal with broken debian linker
+	with stack protector
+	* configure.in: Remove redundant -fno-stack-protector workaround
+	
+Fri Sep 21 15:06:00 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
 	* src/qemu_driver.c: Use libxml for parsing & checking URIs
 
 Thu Sep 20 19:37:00 BST 2007 Richard W.M. Jones <rjones@redhat.com>
